resources/style.css
/* ... */
@media only screen and (max-width: 767px) {
    .grid-md-1 {grid-template-columns: repeat(1, minmax(0, 1fr))}
    .grid-md-2 {grid-template-columns: repeat(2, minmax(0, 1fr))}
    .grid-md-3 {grid-template-columns: repeat(3, minmax(0, 1fr))}
    .grid-md-4 {grid-template-columns: repeat(4, minmax(0, 1fr))}
    .grid-md-5 {grid-template-columns: repeat(5, minmax(0, 1fr))}
    .grid-md-6 {grid-template-columns: repeat(6, minmax(0, 1fr))}
    .grid-md-7 {grid-template-columns: repeat(7, minmax(0, 1fr))}
    .grid-md-8 {grid-template-columns: repeat(8, minmax(0, 1fr))}
    .grid-md-9 {grid-template-columns: repeat(9, minmax(0, 1fr))}
    .grid-md-10 {grid-template-columns: repeat(10, minmax(0, 1fr))}
    .grid-md-11 {grid-template-columns: repeat(11, minmax(0, 1fr))}
    .grid-md-12 {grid-template-columns: repeat(12, minmax(0, 1fr))}
}

@media only screen and (max-width: 599px) {
    .grid-sm-1 {grid-template-columns: repeat(1, minmax(0, 1fr))}
    .grid-sm-2 {grid-template-columns: repeat(2, minmax(0, 1fr))}
    .grid-sm-3 {grid-template-columns: repeat(3, minmax(0, 1fr))}
    .grid-sm-4 {grid-template-columns: repeat(4, minmax(0, 1fr))}
    .grid-sm-5 {grid-template-columns: repeat(5, minmax(0, 1fr))}
    .grid-sm-6 {grid-template-columns: repeat(6, minmax(0, 1fr))}
    .grid-sm-7 {grid-template-columns: repeat(7, minmax(0, 1fr))}
    .grid-sm-8 {grid-template-columns: repeat(8, minmax(0, 1fr))}
    .grid-sm-9 {grid-template-columns: repeat(9, minmax(0, 1fr))}
    .grid-sm-10 {grid-template-columns: repeat(10, minmax(0, 1fr))}
    .grid-sm-11 {grid-template-columns: repeat(11, minmax(0, 1fr))}
    .grid-sm-12 {grid-template-columns: repeat(12, minmax(0, 1fr))}
}

/* flex */

.flex {
    display: flex; 
    column-gap: var(--theme-element-spacing);
}

.flex-wrap {
    flex-wrap: wrap;
}

.flex-no-gap {
    gap: 0px;
}

/* header */

.header {
    padding: 40px;
    z-index: 2;
    color: white;
    font-size: 40px;
    line-height: initial;
    background-color: var(--theme-secondary);
}

/* footer */

.footer {
    display: flex;
    overflow-x: auto;
    gap: var(--theme-element-spacing); 
    padding-top: var(--theme-element-spacing); 
    padding-bottom: var(--theme-element-spacing);
    margin-bottom: 0px;
}

.footer-spacer {
    display: flex;
    min-height: 100vh;
    flex-direction: column;
    justify-content: space-between;
}

@media (max-width: 768px) {
    .footer {
        flex-wrap: wrap-reverse;
    }
    .footer > * {
        width: 100%;
    }
}

/* menu */

.menu {
    display: flex;
    box-sizing: border-box;
    flex-wrap: nowrap;
    flex-direction: row;
    align-items: center;
    position: sticky;
    position: -webkit-sticky;
    top: 0;
    height: 50px;
    width: 100%;
    padding: 0 10px;
    z-index: 2;
    font-size: 19px;
    margin-bottom: 0;
    text-decoration: none;
    white-space: nowrap;
    background-color: var(--theme-primary);
    user-select: none;
    -webkit-user-select: none;
    -ms-user-select: none;
}

.menu *:not(div) {
    box-sizing: border-box;
    padding: 0 10px;
    color: #ffffff99;
}

.menu-centered {
    justify-content: space-between;
}

.menu a:hover, .menu .menu-active {
    color: white;
    text-decoration: none;
}

.menu .menu-title {
    font-weight: bold;
    color: white;
}

.menu img {
    width: initial;
    height: 50px;
    padding: 16px 10px 16px 10px;
    margin: 0px;
    cursor: pointer;
}

.menu .icon {
    display: block;
    object-fit: scale-down;
}

.menu .button {
    margin: 10px 10px;
    max-height: 35px;
}

.menu input {
    color: var(--theme-text);
    border: 0px;
    max-height: 35px;
    min-height: 35px;
    margin: 10px 10px;
    width: initial;
}

.menu .dropdown {margin: 0 10px;}
.menu .dropdown input {margin: 0px;}

/* navigation */

.navigation {
    position: absolute;
    display: block;
    position: fixed;
    left: 0;
    height: calc(100% - 130px);
    padding: 40px 20px;
    width: 210px;
    color: var(--theme-text);
    background-color: var(--theme-grey-primary);
    z-index: 1;
    transition: left 0.2s;
    overflow-y: hidden;
    user-select: none;
    -webkit-user-select: none;
    -ms-user-select: none;
}

.navigation:hover {overflow-y: auto}
@media (hover: none) {.navigation {overflow-y: auto}}
@media screen and (max-width: 768px) {.navigation {overflow-y: auto}}

.navigation *:not(div) {
    display: block;
    max-width: 230px;
    padding: 0px 10px;
    line-height: 40px;
    font-size: 18px;
    border-radius: var(--theme-border-radius);
    text-decoration: none;
    white-space: nowrap;
    overflow-x: hidden;
    color: var(--theme-text);
}

.navigation  > *:first-child {
    margin-top: 0px;
}

@media screen and (min-width: 769px) {.mobile-navigation + * {
    margin-top: 0px !important;
}}

.navigation img {
    margin-top: 10px;
    margin-bottom: 10px;
    max-width: 190px;
}

.navigation h2 {
    margin-top: 40px;
    margin-bottom: 20px;
    font-size: 30px;
}

.navigation a:hover, .navigation .navigation-active, .navigation .menu-active {
    background-color: var(--theme-grey-secondary);
    text-decoration: none;
}

.navigation a:active, .navigation a:visited {
    color: var(--theme-text);
    text-decoration: none;
}

.navigation-content {
    margin-left: 250px;
}

@media (max-width: 768px) {
    .navigation.show {left: 0px !important}
    .navigation-content-hide {opacity: 0.5}
}

@media (max-width: 768px) {.navigation {left: -250px}}
@media (max-width: 768px) {.navigation-content {margin-left: 0}}
@media (max-width: 992px) {.navigation-content .container {width: 100%}}

/* headlines */

h1, h2, h3, h4, h5, h6 {
    font-weight: 500;
    margin: calc(var(--theme-element-spacing) * 2) 0px var(--theme-element-spacing) 0px;
    scroll-margin-top: calc(50px + var(--theme-element-spacing));
}

h1 {font-size: 40px; line-height: 60px;}
h2 {font-size: 30px; line-height: 50px;}
h3 {font-size: 25px; line-height: 45px;}
/* ... */

